--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-#esther{
+#clientdetails{
     background-image: url("/images/pexels-paul-abel-7427928.jpg");
     background-position: center;
     background-repeat: no-repeat;
@@ -12,9 +12,7 @@
 
 .center{
     text-align: center;
+    font-size: larger;
+    
 }
 
-.m-description{
-    font-size: 35px;
-    font-weight: bold;
-}
