--- a/css/index.css
+++ b/css/index.css
@@ -2,12 +2,12 @@
   background-image: url("https://media.istockphoto.com/photos/tea-plantationchinese-tea-picture-id660088678?b=1&k=20&m=660088678&s=170667a&w=0&h=34Xp_k9u2m7ORtad_om-T2rwXKzzxDuv653lRPY1GKc=");
   background-size: cover;
   position: relative;
-  margin-top: 2%;
+
   
 }
 .head h1{
     font-family: 'Courgette', cursive;
-    
+    color: greenyellow;
     background-color: ghostwhite;
     text-align: center;
    
@@ -20,7 +20,25 @@
     position: relative;
     background: rgba(0, 189, 173, 0.7);
     margin-top: 2%;
-    margin-bottom: 4%;
+    margin-bottom: 2%;
     margin-left: 2%;
     margin-right: 2%;
+}
+.all{
+    font-size: small;
+}
+.more-information{
+    text-align: center;
+}
+.secondpart{
+    border-top: 1px solid white;
+    padding-top: 1%;
+}
+.breeds{
+    background-color:hsla(120,60%,70%,0.7);
+    
+}
+.forums{
+    background-color:rgba(218, 224, 133, 0.7);
+    
 }
