--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,10 @@
-body #sign-page{
+#sign-page{
     background-image: url(https://images.unsplash.com/photo-1522747776116-64ee03be1dad?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
     background-repeat: no-repeat;
     background-size:cover;
    
 }
-.sign{
+#sign{
     margin-top: 10%;
     background-color: rgba(255, 255, 255, 0.671);
     height: 60vh;
@@ -17,5 +17,15 @@ body #sign-page{
 }
 #sign h6{
     margin-top: 5%;
+}
+#sign h4{
+    padding-top: 5%;
+}
+#sign-up{
+    margin-top: 8%;
+}
+button{
+    margin-top: 5%;
+    
 }
 
