--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
     background-image: url(https://images.unsplash.com/photo-1522747776116-64ee03be1dad?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
     background-repeat: no-repeat;
     background-size:cover;
+    height: 90vh;
    
 }
 #sign{
@@ -22,10 +23,11 @@
     padding-top: 5%;
 }
 #sign-up{
-    margin-top: 8%;
+   display: none;
 }
 button{
     margin-top: 5%;
-    
+
 }
+
 
