--- a/css/index.css
+++ b/css/index.css
@@ -33,13 +33,18 @@ header img{
 }
 .container{
    margin-top: 15%;
-   background-color: white;
+   background-color: rgba(255, 255, 255, 0.719);
    height: 65vh;
    width: 70vw;
    color: black;
    margin-bottom: 30px;
    font-size:18px ;
-  
+}
+
+#teaheading{
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 7px;
 }
 
 .content{
