relink the images

--- a/css/contact.css
+++ b/css/contact.css
@@ -23,7 +23,7 @@
 }
 #clientdetails{
     margin-bottom: 20px;
-    background-image: url("/images/pexels-paul-abel-7427928.jpg");
+    background-image: url("../images/pexels-paul-abel-7427928.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
