--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@
    margin-left: 20px;
 }
 body{
-   background-image: url(/assets/tee.jpg);
+   background-image: url("../assets/tee.jpg");
    background-repeat: no-repeat;
    background-size: cover;
 }
