--- a/css/profile.css
+++ b/css/profile.css
@@ -61,8 +61,9 @@ body{
     margin-left: 20%;
 }
 .farmerDetails{
-    color:aquamarine;
-    font-size: small;
+    color:white;
+    font-size: 20px;
+    font-weight: bold;
 }
 .history{
     
